--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,5 @@ cuda-python==12.8.0
 langchain==0.3.18
 langchain-groq==0.2.4
 langchain-google-genai==2.0.11
+langchain-ollama==0.2.3
+ragas==0.2.14
