--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,6 @@ langchain-groq==0.2.4
 langchain-google-genai==2.0.11
 langchain-ollama==0.2.3
 ragas==0.2.14
+openai==1.70.0
+matplotlib==3.10.1
+scipy==1.15.2
